fixed bug did B-A instead of A-B

--- a/src/notebooks/MIxS_comparison.ipynb
+++ b/src/notebooks/MIxS_comparison.ipynb
@@ -772,26 +772,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "265\n"
+      "94\n"
      ]
     }
    ],
    "source": [
     "# Non-MIxS terms\n",
-    "differenceList = parquetFileColumns.difference(possibleColumnNames)\n",
+    "differenceList = possibleColumnNames.difference(parquetFileColumns)\n",
     "print(len(differenceList))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
