.strip introduced a bug

--- a/src/notebooks/MIxS_comparison.ipynb
+++ b/src/notebooks/MIxS_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -228,19 +228,20 @@
        "[5 rows x 464 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "parquetFile = pd.read_parquet(path='../input/harmonized-table.parquet.gzip')\n",
     "parquetFile.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +713,7 @@
        " 'wind_speed'}"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,74 +725,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "293\n"
+      "364\n"
      ]
     }
    ],
    "source": [
     "#Schema folder is basically https://github.com/cmungall/mixs-source/tree/main/src/schema\n",
     "schemaFolder = '../input/schema'\n",
-    "possibleColumnNames = []\n",
+    "MIxS_Terms = []\n",
     "for yamlFile in os.listdir(schemaFolder):\n",
     "    data = yaml.load(open(os.path.join(schemaFolder, yamlFile), 'r'), yaml.Loader)\n",
-    "    term = yamlFile.strip('.yaml').replace('_','-')\n",
+    "    term = yamlFile.replace('.yaml','').replace('_','-')\n",
     "    if data.get('classes').get(term) is not None:\n",
     "        slots = data.get('classes').get(term).get('slots')\n",
-    "        possibleColumnNames.extend(slots)\n",
-    "        \n",
-    "possibleColumnNames = set(possibleColumnNames)\n",
-    "print(len(possibleColumnNames))"
+    "        MIxS_Terms.extend(slots)\n",
+    "\n",
+    "MIxS_Terms = set(MIxS_Terms)\n",
+    "print(len(MIxS_Terms))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "199\n"
+      "262\n"
      ]
     }
    ],
    "source": [
     "# Column names that are MIxS\n",
     "\n",
-    "commonList = list(parquetFileColumns & possibleColumnNames)\n",
+    "commonList = list(parquetFileColumns & MIxS_Terms)\n",
     "print(len(commonList))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "94\n"
+      "202\n"
      ]
     }
    ],
    "source": [
     "# Non-MIxS terms\n",
-    "differenceList = possibleColumnNames.difference(parquetFileColumns)\n",
+    "differenceList = parquetFileColumns.difference(commonList)\n",
     "print(len(differenceList))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
