another bug:class names have no pattern

--- a/src/notebooks/MIxS_comparison.ipynb
+++ b/src/notebooks/MIxS_comparison.ipynb
@@ -725,14 +725,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "364\n"
+      "602\n"
      ]
     }
    ],
@@ -743,9 +743,26 @@
     "for yamlFile in os.listdir(schemaFolder):\n",
     "    data = yaml.load(open(os.path.join(schemaFolder, yamlFile), 'r'), yaml.Loader)\n",
     "    term = yamlFile.replace('.yaml','').replace('_','-')\n",
+    "    if term == 'checklists':\n",
+    "        term = 'MIGS eukaryote'\n",
+    "    elif term == 'hydrocarbon-resources-fluids-swabs':\n",
+    "        term = 'hydrocarbon resources-fluids_swabs'\n",
+    "    elif term == 'hydrocarbon-resources-cores':\n",
+    "        term = 'hydrocarbon resources-cores'\n",
+    "    elif term == 'miscellaneous-natural-or-artificial-environment':\n",
+    "        term = 'miscellaneous natural or artificial environment'\n",
+    "    elif term == 'microbial-mat-biofilm':\n",
+    "        term = 'microbial mat_biofilm'\n",
+    "    elif term == 'wastewater-sludge':\n",
+    "        term = 'wastewater_sludge'\n",
+    "    elif term == 'built-environment':\n",
+    "        term = 'built environment'\n",
+    " \n",
     "    if data.get('classes').get(term) is not None:\n",
     "        slots = data.get('classes').get(term).get('slots')\n",
     "        MIxS_Terms.extend(slots)\n",
+    "    \n",
+    "        \n",
     "\n",
     "MIxS_Terms = set(MIxS_Terms)\n",
     "print(len(MIxS_Terms))"
@@ -753,46 +770,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "262\n"
+      "303\n"
      ]
     }
    ],
    "source": [
     "# Column names that are MIxS\n",
     "\n",
-    "commonList = list(parquetFileColumns & MIxS_Terms)\n",
+    "commonList = parquetFileColumns.intersection(MIxS_Terms)\n",
     "print(len(commonList))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "202\n"
+      "161\n"
      ]
     }
    ],
    "source": [
     "# Non-MIxS terms\n",
-    "differenceList = parquetFileColumns.difference(commonList)\n",
+    "differenceList = parquetFileColumns.difference(MIxS_Terms)\n",
     "print(len(differenceList))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
