add eval metrics

--- a/src/notebooks/NMDC-mixs-triad-classification-1.ipynb
+++ b/src/notebooks/NMDC-mixs-triad-classification-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "moved-intranet",
+   "id": "august-destiny",
    "metadata": {},
    "source": [
     "# MIxS Triad Classification\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "trying-cannon",
+   "id": "extensive-introduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "enclosed-revision",
+   "id": "solid-legend",
    "metadata": {},
    "source": [
     "## load biosample data before NER"
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "suspended-dining",
+   "id": "impossible-breed",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wicked-delta",
+   "id": "continuing-granny",
    "metadata": {},
    "source": [
     "#### drop rows where either env_broad_scale, env_local_scale, or env_medium are null"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "permanent-decimal",
+   "id": "proved-adrian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "unlike-copying",
+   "id": "presidential-fashion",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "flying-monkey",
+   "id": "frequent-found",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "close-scholar",
+   "id": "extreme-scott",
    "metadata": {},
    "source": [
     "## load runNER output\n",
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mighty-chance",
+   "id": "statistical-radiation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "complimentary-advertiser",
+   "id": "announced-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "under-springer",
+   "id": "cloudy-anatomy",
    "metadata": {},
    "source": [
     "## load one-hot-encoded runNER output"
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "accepted-confusion",
+   "id": "mounted-peter",
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "modern-hudson",
+   "id": "instructional-korea",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crazy-activation",
+   "id": "color-cattle",
    "metadata": {},
    "source": [
     "## There are fewer rows in the one-hot output than in the biosample data. So, subset the biosample data.\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "skilled-nightlife",
+   "id": "innocent-clone",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "uniform-evidence",
+   "id": "nearby-tuning",
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "introductory-track",
+   "id": "centered-dealer",
    "metadata": {},
    "source": [
     "## create target sets"
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "assured-identification",
+   "id": "acute-action",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-differential",
+   "id": "thrown-change",
    "metadata": {},
    "source": [
     "## create feature set by adding gold path info to one-hot-encoded data"
@@ -824,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "active-carter",
+   "id": "italic-soldier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-momentum",
+   "id": "worse-limitation",
    "metadata": {},
    "source": [
     "## classify env_broad_scale"
@@ -847,8 +847,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "extra-popularity",
+   "execution_count": 20,
+   "id": "graduate-ministry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "uniform-enhancement",
+   "id": "classical-invalid",
    "metadata": {},
    "source": [
     "#### run classifier for 10 iterations"
@@ -866,39 +866,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "located-dressing",
+   "execution_count": 44,
+   "id": "julian-surgery",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_10 = CatBoostClassifier(iterations=10)"
+    "# see https://www.kaggle.com/mitribunskiy/tutorial-catboost-overview for param examples\n",
+    "# supported metrics https://catboost.ai/en/references/custom-metric__supported-metrics\n",
+    "model_10 = CatBoostClassifier(iterations=10, eval_metric='AUC', random_seed=1, use_best_model=True, verbose=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "authentic-termination",
+   "execution_count": 45,
+   "id": "patent-artwork",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate set to 0.5\n",
+      "0:\ttest: 0.6211100\tbest: 0.6211100 (0)\ttotal: 437ms\tremaining: 3.94s\n",
+      "5:\ttest: 0.5467054\tbest: 0.6211100 (0)\ttotal: 2.3s\tremaining: 1.53s\n",
+      "9:\ttest: 0.5705852\tbest: 0.6211100 (0)\ttotal: 3.77s\tremaining: 0us\n",
+      "\n",
+      "bestTest = 0.6211100304\n",
+      "bestIteration = 0\n",
+      "\n",
+      "Shrink model to first 1 iterations.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostClassifier at 0x14889a550>"
+       "<catboost.core.CatBoostClassifier at 0x14ec1ec70>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# set logging_level='Silent' to turn of output; set plot=True to see figure\n",
-    "model_10.fit(X_train, y_train, cat_features=cat_features, verbose=False)"
+    "model_10.fit(X_train, y_train, cat_features=cat_features, eval_set=(X_test, y_test))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "greenhouse-advocacy",
+   "id": "encouraging-penny",
    "metadata": {},
    "source": [
     "#### run classifier for 100 iterations"
@@ -906,29 +923,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "specific-relations",
+   "execution_count": 46,
+   "id": "simplified-product",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model_100 = CatBoostClassifier(iterations=100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "serial-ottawa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set logging_level='Silent' to turn of output; set plot=True to see figure\n",
-    "# model_100.fit(X_train, y_train, cat_features=cat_features, verbose=False)"
+    "model_100 = CatBoostClassifier(iterations=100, eval_metric='AUC', random_seed=1, use_best_model=True, verbose=20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "moderate-segment",
+   "id": "abstract-kingston",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learning rate set to 0.275109\n",
+      "0:\ttest: 0.6211100\tbest: 0.6211100 (0)\ttotal: 418ms\tremaining: 41.4s\n",
+      "20:\ttest: 0.6960436\tbest: 0.6960436 (20)\ttotal: 8.18s\tremaining: 30.8s\n",
+      "40:\ttest: 0.7082207\tbest: 0.7082207 (40)\ttotal: 16.8s\tremaining: 24.1s\n",
+      "60:\ttest: 0.7118407\tbest: 0.7118407 (60)\ttotal: 26.2s\tremaining: 16.8s\n",
+      "80:\ttest: 0.7133466\tbest: 0.7133466 (80)\ttotal: 36.4s\tremaining: 8.54s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set logging_level='Silent' to turn of output; set plot=True to see figure\n",
+    "model_100.fit(X_train, y_train, cat_features=cat_features, eval_set=(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eight-black",
    "metadata": {},
    "outputs": [],
    "source": []
